
[project]
name = "wandbmon"
version = "0.1.0"
description = "A library for monitoring models at inference time"
authors = [
    {name = "Weights & Biases", email = "support@wandb.com"},
]
# "weave @ git+ssh://git@github.com/wandb/weave-internal.git@master"
dependencies = [
    "wandb>=0.15.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Company = "https://wandb.com"
Documentation = "https://docs.wandb.com/"
Changes = "https://github.com/wandb/wandbmon/releases"
"Source Code" = "https://github.com/wandb/wandbmon"
"Issue Tracker" = "https://github.com/wandb/wandbmon/issues/"
Twitter = "https://twitter.com/weights_biases"

[project.optional-dependencies]
vision = ["Pillow"] 

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wandbmon"]

[tool.setuptools.dynamic]
version = {attr = "wandbmon.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.autopep8]
max_line_length = 180
ignore = "E714"

[tool.ruff]
line-length = 180
ignore = ["E711"]

[tool.flake8]
max-line-length = 180